--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<h2><a href="https://www.khanacademy.org/computer-programming/data-dig-pokemon-stats_jg/5613699917201408">Data dig - Pokemon Stats_JG</a></h2><script src="https://www.khanacademy.org/computer-programming/data-dig-pokemon-stats_jg/5613699917201408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
-
+<h2><a href="https://www.khanacademy.org/computer-programming/data-dig-pokemon-stats_jg/5613699917201408">Data dig - Pokemon Stats_JG</a></h2><script src="https://www.khanacademy.org/computer-programming/data-dig-pokemon-stats_jg/5613699917201408/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
 
 
